--- a/README
+++ b/README
@@ -3,5 +3,5 @@
 
 shared-color-targets contains target files for popular scanner calibration targets.
 
-These include the IT 8.7 targets at http://www.targets.coloraid.de/
+These include the IT 8.7 targets from http://www.targets.coloraid.de/
 
