--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Version 0.1.1
+~~~~~~~~~~~~~
+Released: 2012-02-23
+
+New Features:
+ - Add the latest it8 reference files from Wolf Faust (Richard Hughes)
+
 Version 0.1.0
 ~~~~~~~~~~~~~
 Released: 2011-09-08
