--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Version 0.1.2
+~~~~~~~~~~~~~
+Released: 2012-11-28
+
+New Features:
+ - Add the latest it8 reference files from Wolf Faust
+
 Version 0.1.1
 ~~~~~~~~~~~~~
 Released: 2012-02-23
