--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Version 0.1.3
+~~~~~~~~~~~~~
+Released: 2013-12-02
+
+New Features:
+- Add the latest it8 reference files (Wolf Faust)
+
 Version 0.1.2
 ~~~~~~~~~~~~~
 Released: 2012-11-28
