--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Version 0.1.4
+~~~~~~~~~~~~~
+Released: 2014-04-04
+
+New Features:
+ - Add the latest it8 reference files (Wolf Faust)
+
 Version 0.1.3
 ~~~~~~~~~~~~~
 Released: 2013-12-02
