--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Version 0.1.6
+~~~~~~~~~~~~~
+Released: 2015-10-27
+
+New Features:
+ - Add the latest it8 reference files (Wolf Faust)
+
 Version 0.1.5
 ~~~~~~~~~~~~~
 Released: 2014-12-20
